...
    "business" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Business"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Business"
...
    "entertainment" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Entertainment"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Divertissement"
...
    "general" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "General"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Général"
...
    "health" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Health"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Santé"
...
    "news" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Top headlines"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Actualités"
...
    "no" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "No"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Non"
...
    "science" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Science"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Science"
...
    "search" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Search"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Recherche"
...
    "settings" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Settings"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Paramètres"
...
    "sports" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Sports"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Sports"
...
    "suggestion" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Suggestion"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Suggestion"
...
    "technology" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Technology"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Technologie"
...
    "worldMap" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "World map"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Carte du monde"
...
    "yes" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Yes"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Oui"
...
