...
    
    private lazy var gradient: CAGradientLayer = {
        let gradient = getGradient2()
        return gradient
    }()
    
    private lazy var scrollView: UIScrollView = {
        let view = UIScrollView()
        view.translatesAutoresizingMaskIntoConstraints = false
        view.showsVerticalScrollIndicator = true
        view.showsVerticalScrollIndicator = false
        view.isDirectionalLockEnabled = true
        view.accessibilityIdentifier = "scrollView"
...
        if #unavailable(iOS 26.0) {
            button.layer.borderColor = UIColor.white.cgColor
            button.layer.borderWidth = 0.5
        }
        
        button.titleLabel?.font = UIFont.systemFont(ofSize: Constants.ArticleDetail.buttonTitleFontSize, weight: .regular)
        button.accessibilityIdentifier = "websiteButton"
        button.accessibilityTraits = [.toggleButton]
        
        if #available(iOS 26.0, *) {
            button.configuration = .clearGlass()
            button.tintColor = .white
        }
...
    func configure(with viewModel: ArticleDetailViewModel) {
        self.viewModel = viewModel
    }
    
    private func setNavigationBar() {
        // For UI testing
        navigationItem.rightBarButtonItem?.accessibilityIdentifier = "shareButton"
        
        // Appearance of navigation bar
        let customNavBarAppearance = UINavigationBarAppearance()
        
        // Right bar button with action and color
        let item = UIBarButtonItem(image: UIImage(systemName: "arrowshape.turn.up.forward.fill"), style: .plain, target: self, action: #selector(onClickShareButton))
...
