...
        let mapView = MKMapView()
        mapView.translatesAutoresizingMaskIntoConstraints = false
        mapView.delegate = self
        mapView.showsUserLocation = true
        mapView.register(CountryAnnotationView.self, forAnnotationViewWithReuseIdentifier: "countryAnnotation")
        mapView.register(CountryClusterAnnotationView.self, forAnnotationViewWithReuseIdentifier: "countryCluster")
        mapView.accessibilityIdentifier = "map"
        
        return mapView
    }()
    
    // For searching news
    private lazy var searchBar: UISearchBar = {
...
        tableView.register(CountryAutoCompletionTableViewCell.self, forCellReuseIdentifier: "autoCompletionCell")
        tableView.accessibilityIdentifier = "tableView"
        
        return tableView
    }()
    
    private lazy var locationButton: UIButton = {
        let button = UIButton(configuration: getButtonConfiguration(symbolName: "location.fill"))
        button.translatesAutoresizingMaskIntoConstraints = false
        button.tintColor = .white
        button.layer.cornerRadius = Constants.MapView.cornerRadius
        
        if #available(iOS 26.0, *) {
...
            button.configuration = .clearGlass()
            button.layer.borderWidth = 0.5
        } else {
            button.layer.borderWidth = 0.5
        }
        
        button.accessibilityIdentifier = "zoomButton"
        button.layer.borderColor = UIColor.white.cgColor
        button.setImage(UIImage(systemName: "globe"), for: .normal)

        return button
    }()
    
...
